samples/_failures_safe/1761485866_7ec6cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2cd9b1d8.c: In function ‘main’:
./samples/SAFE/__tmp_2cd9b1d8.c:140: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_2cd9b1d8.c:139:5: error: expected declaration or statement at end of input
  139 |     while
      |     ^~~~~
